Refactor and start new given.